getProduct(s) impl. Sure this will break

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,10 @@
           <generatedSourcesDirectory>
             ${project.basedir}/src/main/generated
           </generatedSourcesDirectory>
+          <compilerArgs>
+            <arg>-AoutputDirectory=${project.basedir}/src/main</arg>
+          </compilerArgs>
+
         </configuration>
       </plugin>
       <plugin>
